try fix css on mobile

--- a/src/LandingPage/LandingPage.css
+++ b/src/LandingPage/LandingPage.css
@@ -30,8 +30,10 @@ body {
     grid-template-rows: 10vh 80vh 10vh; /* rows */
     grid-column-gap: 0px;
     grid-row-gap: 0px;
-    height: 100vh;
-    width: 100vw;
+    min-height: 100vh;
+    max-height: 100vh;
+    min-width: 100vw;
+    max-width: 100vw;
     z-index: 0;
     background: radial-gradient(circle, rgb(0, 9, 50) 40%, rgba(0, 9, 114, 0.9) 80%, rgba(0, 0, 0, 0.9) 100%);
 }
